# uclv_fompush

./: .gitignore  .gitmodules  Experiment1.txt  Experiment2.txt  Experiment5.txt  Output.json  Output.txt  Output4.txt  Output5.txt  OutputController.json  Output_Data2.txt  Output_Data3.txt  Output_File.txt  Output_File_Straight.txt  Output_file.txt  PeterQuestionsVicon  Plot.m  README.md  Test.txt  install.sh  output.txt  stationary_unfiltered.eps  straigth_line_velocity_unfiltered.eps
Simulation/ClosedLoopPushing/: .gitignore  EulerIntegration.m  GeneralSolversPerformanceTest.m  GeneralTrajectoryLearning.m  GetTestParams.m  KBestModes.m  Main.m  PlotExperimentsMPC.m  Setup.m  TestChameleonMode.m  TestFOMStructure.m  TestLineWithOptimalModes.m  TestPusherSlider.m  ccodetest.c  cost_matrix_plots.m  fom_structure_study.R  gen_ref.m  lin_traj.m  my_main.m  plot_my_main  plot_my_main.m  test_mpc.m
Simulation/ClosedLoopPushing/+Combinatorics/: VariationWithRepetition.m
Simulation/ClosedLoopPushing/+MPCSolvers/: FOMSolver.m  MIQPSolver.m  MPCSolver.m
Simulation/ClosedLoopPushing/+Models/: QSPusherSlider.m
Simulation/ClosedLoopPushing/+PusherSliderStates/: QSSlidingDown.m  QSSlidingUp.m
Simulation/ClosedLoopPushing/+VideoEditing/: DrawTrajectoryOnImage.m  TestVideoDrawTrajectory.m  WorldToCameraTrajectory.m  intrinsic_matrix.txt
Simulation/ClosedLoopPushing/@Animator/: Animator.m
Simulation/ClosedLoopPushing/@PusherSlider/: AnimateMPC.m  AnimateMotionCone.m  ConstraintMatrices.m  ConstraintMatricesFOM.m  ConstraintMatricesFOM_original.m  ConstraintMatricesFOMdelayed.m  ConstraintMatricesMIQP.m  DataMC.m  EulerIntegration.m  EulerIntegration_original.m  MotionCone.m  PusherSlider.m  UpdateMatricesIC.m  UpdateMatricesICdelayed.m  controller.m  errorVector.m  errorVectorBK.m  gammaNonlinear.eps  symbolicLinearize.m
Simulation/ClosedLoopPusing/: DrawLineBetweenTwoPoints.m  DrawTrajectoryOnImage.m  EulerIntegration.m  GeneralSolversPerformanceTest.m  HybridMode.m  HybridState.m  Main.m  PlotExperimentsMPC.m  RobotToWorldTrajectory.m  Setup.m  SlidingDownState.m  SlidingUpState.m  StickingState.m  TestMatlabCalibration.m  TestVideoDrawTrajectory.m  distortion_matrix.txt
Simulation/ClosedLoopPusing/+Animation/: Animator.m
Simulation/ClosedLoopPusing/+HybridInterfaces/: HybridState.m
Simulation/ClosedLoopPusing/+MPCSolvers/: FOMSolver.m
Simulation/ClosedLoopPusing/+PusherSliderStates/: QSSlidingUp.m  QSSticking.m
Simulation/ClosedLoopPusing/+VideoEditing/: TestMatlabCalibration.m
Simulation/ClosedLoopPusing/@Animator/: Animate.m
Simulation/ClosedLoopPusing/@PusherSlider/: Animate.m  ComputeCost.m  ConstraintMatricesFOM.m  ConstraintMatricesMIQP.m  Data.m  EulerIntegration.m  Gamma.m  MotionCone.m  Plot.m  PlotCost.m  PlotMPC.m  PusherSlider.m  UpdateMatricesIC.m  controller.m  dx_funct.m  errorVector.m  m_max_funct.m  symbolicLinearize.m  symbolicNonLinearize.m
Simulation/ClosedLoopPusing/SimulationResults/: SimulationResults.mat
Simulation/ClosedLoopPusing/SimulationResultsTest/: SimulationResultsTest.mat
Simulation/ClosedLoopPusing/data/: Data.mat
Simulation/System/: Figure.m  Friction.m  Helper.m
catkin_ws/: OutputVel_0_05.json  example.json  frames.gv
catkin_ws/src/cpush_config/: CMakeLists.txt  abb.launch  mcubeRobotParams.yaml  package.xml  robot_perception.launch
catkin_ws/src/cpush_config/models/IRB120/: irb_120.urdf
catkin_ws/src/push_control/: CMakeLists.txt
catkin_ws/src/push_control/EGMExampleCode/: main  main.cpp
catkin_ws/src/push_control/data/: A_bar.txt  Acc_0_01.json  Acc_0_03.json  Acc_0_05.json  Acc_0_1.json  Acc_0_2.json  Acc_0_5.json  Acc_1.json  Acc_10.json  Acc_100.json  Acc_20.json  Acc_3.json  Acc_5.json  Aeq_up.txt  Ain_down.txt  Default_CondTime_0_Sine_0_5.json  Default_CondTime_10000_Sine_0_5.json  Default_CondTime_100_Sine_0_5.json  Default_CondTime_10_Sine_0_5.json  Default_CondTime_1_Sine_0_5.json  Default_MaxDevPos_1000_MaxDevVel_1000_Sine_0_5.json  Default_MaxDevPos_100_MaxDevVel_1000_Sine_0_5.json  Default_MaxDevPos_10_MaxDevVel_1000_Sine_0_5.json  Default_MaxDevVel_1000_Sine_0_5.json  Default_MaxDevVel_500_Sine_0_5.json  Default_RampOut_0_5_Sine_0_5.json  Default_RampOut_0_Sine_0_5.json  Default_Sine_0_5.json  Default_Sine_1.json  Default_Sine_3.json  Default_minmax_0_001_Sine_0_5.json  H.txt  OutputVelFctTime_0_01.json  OutputVel_0_01.json  OutputVel_0_03.json  OutputVel_0_05.json  OutputVel_0_1.json  OutputVel_0_3.json  OutputVel_0_5.json  OutputVel_1.json  (+64 more)
catkin_ws/src/push_control/src/: ABBRobot.cpp  ABBRobot.h  EGMTesting.cpp  OptProgram.cpp  OptProgram.h  add.h  helper.cpp  helper.h  json.h  main.cpp  pushing.cpp  pushing.h
catkin_ws/src/push_control/src_QS/: ABBRobot.cpp  ABBRobot.h  HeaderFiles.h  OptProgram.cpp  OptProgram.h  Push.cpp  Push.h  Structures.h  helper.cpp  helper.h  main.cpp
catkin_ws/src/push_control/src_QS/Data/: Matrices.json  MatricesTarget.json  MatricesTarget2.json
catkin_ws/src/quasi_static/: CMakeLists.txt  package.xml
software/Backup/: EGM_test_UDP_2.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/BACKINFO/: backinfo.txt  fpsystem.xml
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/RAPID/TASK1/PROGMOD/: SERVER.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/RAPID/TASK2/PROGMOD/: LOGGER.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/RAPID/TASK3/PROGMOD/: LOGGER.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/RAPID/TASK4/PROGMOD/: EGM_test_UDP.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/RAPID/TASK5/PROGMOD/: INIT.mod
software/Backup/MCube6.03_BACKUP_2016-10-23_cpush/SYSPAR/: EIO.cfg  MOC.cfg  SYS.cfg
software/config/: cpush_environment.sh  environment.sh  fompush.pmd
